[package]
authors = ["blackbeam <aikorsky@gmail.com>", "Tricster <mediosrity@gmail.com>"]
description = "Tokio based asynchronous MySql client library."
documentation = "https://docs.rs/mysql_async"
keywords = ["mysql", "database", "asynchronous", "async", "wasi"]
license = "MIT/Apache-2.0"
name = "mysql_async_wasi"
readme = "README.md"
repository = "https://github.com/WasmEdge/mysql_async_wasi"
version = "0.33.0"
exclude = ["test/*"]
edition = "2018"
categories = ["asynchronous", "database"]

[dependencies]
bytes = "1.4"
crossbeam = "0.8.1"
flate2 = { version = "1.0", default-features = false }
futures-core = "0.3"
futures-util = "0.3"
futures-sink = "0.3"
keyed_priority_queue = "0.4"
lazy_static = "1"
lru = "0.12.0"
mysql_common = { version = "0.31", default-features = false }
once_cell = "1.7.2"
pem = "3.0"
percent-encoding = "2.1.0"
pin-project = "1.0.2"
rand = "0.8.5"
serde = "1"
serde_json = "1"
thiserror = "1.0.4"
tracing = { version = "0.1.37", default-features = false, features = [
    "attributes",
], optional = true }
twox-hash = "1"
url = "2.1"

[target.'cfg(not(target_os="wasi"))'.dependencies]
socket2 = "0.5.2"
tokio = { version = "1.0", features = ["io-util", "fs", "net", "time", "rt"] }
tokio-util = { version = "0.7.2", features = ["codec", "io"] }

[target.'cfg(target_os="wasi")'.dependencies]
tokio_wasi = { version = "1", features = [
    "io-util",
    "fs",
    "net",
    "time",
    "rt",
    "macros",
    "sync",
] }
tokio-util_wasi = { version = "0.7.2", features = ["codec", "io"] }
wasmedge_wasi_socket = "0.5"
wasmedge_rustls_api = { version = "0.1.0", optional = true, features = [
    "tokio_async",
] }

[target.'cfg(not(target_os="wasi"))'.dependencies.tokio-rustls]
version = "0.24.0"
optional = true

[target.'cfg(target_os="wasi")'.dependencies.tokio-rustls-wasi]
git = "https://github.com/second-state/tokio-rustls.git"
branch = "v0.24.1"
optional = true


[target.'cfg(not(target_os="wasi"))'.dependencies.tokio-native-tls]
version = "0.3.0"
optional = true

[target.'cfg(not(target_os="wasi"))'.dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.rustls]
version = "0.21.0"
features = ["dangerous_configuration"]
optional = true

[dependencies.rustls-pemfile]
version = "1.0.1"
optional = true

[dependencies.webpki]
version = ">=0.22.1"
features = ["std"]
optional = true

[dependencies.webpki-roots]
version = "0.25.0"
optional = true

[target.'cfg(not(target_os="wasi"))'.dev-dependencies]
tempfile = "3.1.0"
socket2 = { version = "0.5.2", features = ["all"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }

[target.'cfg(target_os="wasi")'.dev-dependencies]
tempfile = "3.1.0"
tokio_wasi = { version = "1", features = [
    "io-util",
    "fs",
    "net",
    "time",
    "rt",
    "macros",
] }
wasmedge_wasi_socket = "0.5"

[features]
default = ["flate2/zlib", "common", "derive", "binlog"]
default-rustls = [
    "flate2/rust_backend",
    "common",
    "derive",
    "rustls-tls",
    "binlog",
]
common = [
    "mysql_common/bigdecimal",
    "mysql_common/rust_decimal",
    "mysql_common/time",
    "mysql_common/frunk",
]
minimal = ["flate2/zlib"]
wasmedge-tls = ["wasmedge_rustls_api"]
native-tls-tls = ["native-tls", "tokio-native-tls"]
rustls-tls = [
    "rustls",
    "tokio-rustls",
    "tokio-rustls-wasi",
    "webpki",
    "webpki-roots",
    "rustls-pemfile",
]
tracing = ["dep:tracing"]
derive = ["mysql_common/derive"]
nightly = []
binlog = ["mysql_common/binlog"]

[lib]
name = "mysql_async"
path = "src/lib.rs"

[profile.bench]
debug = true
